--- a/app/src/main/res/layout/activity_upload_photo.xml
+++ b/app/src/main/res/layout/activity_upload_photo.xml
@@ -6,6 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".view.general.UploadPhoto">
 
+<!--    <androidx.appcompat.widget.Toolbar-->
+<!--        android:id="@+id/toolbar"-->
+<!--        android:layout_width="408dp"-->
+<!--        android:layout_height="28dp"-->
+<!--        android:background="?attr/colorPrimary"-->
+<!--        android:elevation="4dp"-->
+<!--        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"-->
+<!--        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />-->
+
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/smallCard"
         android:layout_width="372dp"
