--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -5,134 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.general.Setting">
-    <Button
-        android:id="@+id/setting_app_update"
-        android:layout_width="364dp"
-        android:layout_height="47dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="160dp"
-        android:background="@drawable/homepage_button_background"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
-
-    <TextView
-        android:id="@+id/sighOutTxt22"
-        android:layout_width="201dp"
-        android:layout_height="23dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="96dp"
-        android:elevation="4dp"
-        android:fontFamily="@font/poppins_bold"
-        android:text="Notification"
-        android:textColor="@color/white"
-        android:textSize="20dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
-
-    <Button
-        android:id="@+id/setting_feeback"
-        android:layout_width="364dp"
-        android:layout_height="47dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="232dp"
-        android:background="@drawable/homepage_button_background"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
-
-
-    <TextView
-        android:id="@+id/patientListTxt12"
-        android:layout_width="200dp"
-        android:layout_height="26dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="168dp"
-        android:elevation="4dp"
-        android:fontFamily="@font/poppins_bold"
-        android:text="App Update"
-        android:textColor="@color/white"
-        android:textSize="20dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
-
-    <Button
-        android:id="@+id/setting_notification"
-        android:layout_width="364dp"
-        android:layout_height="47dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="88dp"
-        android:background="@drawable/homepage_button_background"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
-
-    <Button
-        android:id="@+id/dailyReportButton4caretaker"
-        android:layout_width="364dp"
-        android:layout_height="47dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/homepage_button_background"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
-
-    <TextView
-        android:id="@+id/patientListTxt"
-        android:layout_width="102dp"
-        android:layout_height="26dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="16dp"
-        android:elevation="4dp"
-        android:fontFamily="@font/poppins_bold"
-        android:text="Theme"
-        android:textColor="@color/white"
-        android:textSize="20dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
-
-    <TextView
-        android:id="@+id/patientListTxt34"
-        android:layout_width="102dp"
-        android:layout_height="26dp"
-        android:layout_marginStart="344dp"
-        android:layout_marginTop="96dp"
-        android:elevation="4dp"
-        android:fontFamily="@font/poppins"
-        android:text="On"
-        android:textColor="@color/gray"
-        android:textSize="13dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
-
-    <TextView
-        android:id="@+id/setting_theme"
-        android:layout_width="102dp"
-        android:layout_height="26dp"
-        android:layout_marginStart="316dp"
-        android:layout_marginTop="16dp"
-        android:elevation="4dp"
-        android:fontFamily="@font/poppins"
-        android:text="Default"
-        android:textColor="@color/gray"
-        android:textSize="13dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
-
-
-    <TextView
-        android:id="@+id/patientListTxt3"
-        android:layout_width="102dp"
-        android:layout_height="26dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="240dp"
-        android:elevation="4dp"
-        android:fontFamily="@font/poppins_bold"
-        android:text="Feedback"
-        android:textColor="@color/white"
-        android:textSize="20dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/medicalDiaganosticsHeaderCardView"
+        android:id="@+id/settings_header_card_view"
         android:layout_width="0dp"
         android:layout_height="220dp"
         android:layout_marginTop="-40dp"
@@ -148,7 +23,7 @@
             android:layout_height="match_parent">
 
             <ImageView
-                android:id="@+id/menuButton2"
+                android:id="@+id/settings_menu_button"
                 android:layout_width="33dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -163,24 +38,199 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
                 android:fontFamily="@font/poppins_bold"
-                android:text="Setting"
+                android:text="Settings"
                 android:textColor="@color/white"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent" />
 
             <View
                 android:id="@+id/settingsIcon"
-                android:layout_width="79dp"
-                android:layout_height="50dp"
-                android:layout_marginStart="168dp"
-                android:layout_marginTop="98dp"
-                android:background="@drawable/menu_settings"
+                android:layout_width="86dp"
+                android:layout_height="86dp"
+                android:layout_marginStart="0dp"
+                android:layout_marginBottom="0dp"
+                android:background="@drawable/settings_title_icon"
                 android:elevation="4dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/medicalDiagnosticsTitleTextView" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/settings_theme_button"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        android:background="@drawable/settings_button_background"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/settings_header_card_view">
+
+        <TextView
+            android:id="@+id/theme_button_title"
+            android:layout_width="wrap_content"
+            android:layout_height="20sp"
+            android:layout_marginStart="25dp"
+            android:fontFamily="@font/poppins"
+            android:text="Theme"
+            android:textColor="#FFFFFF"
+            android:textFontWeight="400"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+        <ImageView
+            android:id="@+id/theme_button_arrow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="15dp"
+            android:src="@drawable/settings_arrow"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
+        <TextView
+            android:id="@+id/theme_button_subtitle"
+            android:layout_width="wrap_content"
+            android:layout_height="17sp"
+            android:layout_marginEnd="8dp"
+            android:fontFamily="@font/poppins"
+            android:text="System Default"
+            android:textColor="#FFFFFF"
+            android:textFontWeight="275"
+            android:textSize="13sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/theme_button_arrow"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/settings_notification_button"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        android:background="@drawable/settings_button_background"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/settings_theme_button">
+
+        <TextView
+            android:id="@+id/notification_button_title"
+            android:layout_width="wrap_content"
+            android:layout_height="20sp"
+            android:layout_marginStart="25dp"
+            android:fontFamily="@font/poppins"
+            android:text="Notifications"
+            android:textColor="#FFFFFF"
+            android:textFontWeight="400"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+        <ImageView
+            android:id="@+id/notification_button_arrow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="15dp"
+            android:src="@drawable/settings_arrow"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
+        <TextView
+            android:id="@+id/notification_button_subtitle"
+            android:layout_width="wrap_content"
+            android:layout_height="18sp"
+            android:layout_marginEnd="8dp"
+            android:fontFamily="@font/poppins"
+            android:text="On"
+            android:textColor="#FFFFFF"
+            android:textFontWeight="275"
+            android:textSize="13sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/notification_button_arrow"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/settings_app_update_button"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        android:background="@drawable/settings_button_background"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/settings_notification_button">
+
+        <TextView
+            android:id="@+id/app_update_button_title"
+            android:layout_width="wrap_content"
+            android:layout_height="20sp"
+            android:layout_marginStart="25dp"
+            android:fontFamily="@font/poppins"
+            android:text="App Update"
+            android:textColor="#FFFFFF"
+            android:textFontWeight="400"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+        <ImageView
+            android:id="@+id/app_update_button_arrow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="15dp"
+            android:src="@drawable/settings_arrow"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/settings_feedback_button"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        android:background="@drawable/settings_button_background"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/settings_app_update_button">
+
+        <TextView
+            android:id="@+id/feedback_button_title"
+            android:layout_width="wrap_content"
+            android:layout_height="20sp"
+            android:layout_marginStart="25dp"
+            android:fontFamily="@font/poppins"
+            android:text="Feedback"
+            android:textColor="#FFFFFF"
+            android:textFontWeight="400"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+        <ImageView
+            android:id="@+id/feedback_button_arrow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="15dp"
+            android:src="@drawable/settings_arrow"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
