--- a/app/src/main/res/layout/fragment_patient_add.xml
+++ b/app/src/main/res/layout/fragment_patient_add.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<FrameLayout  android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    tools:context=".view.patient.PatientAddFragment">
     <!-- Background ImageView -->
     <ImageView
         android:id="@+id/backgroundImage"
@@ -18,42 +16,10 @@
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="-16dp">
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <Button
-                android:id="@+id/polygon_left"
-                android:layout_width="26dp"
-                android:layout_height="26dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
-                android:background="@drawable/polygon_2"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.784"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.27" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-            <Button
-                android:id="@+id/polygon_right"
-                android:layout_width="26dp"
-                android:layout_height="26dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
-                android:background="@drawable/polygon_1"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.890"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.27" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
         <TextView
             android:id="@+id/FirstName"
             android:layout_width="133dp"
@@ -61,7 +27,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:fontFamily="sans-serif-black"
-            android:text="First name"
+            android:text="First name*"
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -69,7 +35,7 @@
 
 
         <EditText
-            android:id="@+id/input_nok_FirstName"
+            android:id="@+id/input_patient_FirstName"
             android:layout_width="365dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -101,7 +67,7 @@
             app:layout_constraintTop_toBottomOf="@+id/carePlanSummary" />
 
         <EditText
-            android:id="@+id/input_nok_MiddleName"
+            android:id="@+id/input_patient_MiddleName"
             android:layout_width="365dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -126,7 +92,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:fontFamily="sans-serif-black"
-            android:text="Last Name"
+            android:text="Last Name*"
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -134,7 +100,7 @@
 
 
         <EditText
-            android:id="@+id/input_nok_LastName"
+            android:id="@+id/input_patient_LastName"
             android:layout_width="365dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -158,20 +124,19 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:fontFamily="sans-serif-black"
-            android:text="Address"
+            android:text="Date of Birth*"
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/supportReqSummary" />
 
         <EditText
-            android:id="@+id/input_nok_DateOfBirth"
+            android:id="@+id/input_patient_DateOfBirth"
             android:layout_width="365dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginBottom="15dp"
             android:background="@null"
-            android:hint="Enter/Search Address"
+            android:hint="DD/MM/YYYY"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/dateOfBirth" />
@@ -188,21 +153,21 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:fontFamily="sans-serif-black"
-            android:text="Phone Number"
+            android:text="Medicare no*"
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/dietTimingSummary" />
 
         <EditText
-            android:id="@+id/input_nok_MedicareNumber"
+            android:id="@+id/input_patient_MedicareNumber"
             android:layout_width="365dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="1dp"
             android:background="@null"
             android:inputType="textMultiLine"
-            android:text="+61 412 345 678"
+            android:hint="Eg. 1234 56789 0"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView131" />
@@ -219,20 +184,20 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:fontFamily="sans-serif-black"
-            android:text="Email"
+            android:text="Western Affairs no"
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/drinkLikesSummary" />
 
         <EditText
-            android:id="@+id/input_nok_WesternAffairsNumber"
+            android:id="@+id/input_patient_WesternAffairsNumber"
             android:layout_width="365dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:background="@null"
             android:backgroundTint="#ECECEC"
-            android:hint="someone@example.com"
+            android:hint="Eg. L123456789012"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView61" />
@@ -241,23 +206,26 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="#E5E5E5" />
-        <Button
-            android:id="@+id/MoreInfoOfPatient"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="100dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="100dp"
-            android:layout_marginBottom="10dp"
-            android:backgroundTint="#3297C3"
-            android:fontFamily="@font/poppins_bold"
-            android:text="More info"
-            android:textColor="@color/white"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/behaviorManagementSummary" />
+            android:layout_height="wrap_content">
+
+
+            <Button
+                android:id="@+id/patient_add_NextButton"
+                android:layout_width="127dp"
+                android:layout_height="43dp"
+                android:layout_marginTop="10dp"
+                android:backgroundTint="#3297C3"
+                android:fontFamily="@font/poppins_bold"
+                android:text="Next"
+                android:textColor="@color/white"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="1.0" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </LinearLayout>
 </FrameLayout>
-</ScrollView>
