--- a/app/src/main/res/layout/navigation_view.xml
+++ b/app/src/main/res/layout/navigation_view.xml
@@ -1,141 +1,11 @@
-<com.google.android.material.navigation.NavigationView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.navigation.NavigationView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nav_view"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:layout_gravity="start"
-    android:background="@drawable/menu_background">
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <ImageView
-            android:id="@+id/company_logo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="72dp"
-            android:layout_marginTop="41dp"
-            android:contentDescription="TODO"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/gopher_logo" />
-
-        <LinearLayout
-            android:id="@+id/menu_home_linearLayout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="27dp"
-            android:layout_marginTop="32dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:orientation="horizontal"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/company_logo">
-
-            <TextView
-                android:id="@+id/menu_home_txt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:fontFamily="@font/poppins_bold"
-                android:text="@string/home"
-                android:textColor="#FFFFFF"
-                android:textSize="17sp"
-                android:textStyle="bold" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/menu_admin_linearLayout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="27dp"
-            android:layout_marginTop="63dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:orientation="horizontal"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/menu_home_linearLayout">
-
-            <ImageView
-                android:id="@+id/menu_admin_icon"
-                android:layout_width="22.5dp"
-                android:layout_height="20dp"
-                android:contentDescription="TODO"
-                android:src="@drawable/menu_pen_edit" />
-
-            <TextView
-                android:id="@+id/menu_admin_txt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:fontFamily="@font/poppins_bold"
-                android:text="@string/admin"
-                android:textColor="#FFFFFF"
-                android:textSize="17sp"
-                android:textStyle="bold" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/menu_settings_linearLayout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="27dp"
-            android:layout_marginTop="63dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:orientation="horizontal"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/menu_admin_linearLayout">
-
-            <ImageView
-                android:id="@+id/menu_settings_icon"
-                android:layout_width="22.5dp"
-                android:layout_height="20dp"
-                android:contentDescription="TODO"
-                android:src="@drawable/menu_settings" />
-
-            <TextView
-                android:id="@+id/menu_settings_txt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:fontFamily="@font/poppins_bold"
-                android:text="@string/settings"
-                android:textColor="#FFFFFF"
-                android:textSize="17sp"
-                android:textStyle="bold" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/menu_sign_out_linearLayout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="27dp"
-            android:layout_marginTop="63dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:orientation="horizontal"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/menu_settings_linearLayout">
-
-            <ImageView
-                android:id="@+id/menu_sigh_out_icon"
-                android:layout_width="22.5dp"
-                android:layout_height="20dp"
-                android:contentDescription="TODO"
-                android:src="@drawable/menu_signout" />
-
-            <TextView
-                android:id="@+id/menu_sign_out_txt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:fontFamily="@font/poppins_bold"
-                android:text="@string/sign_out"
-                android:textColor="#FFFFFF"
-                android:textSize="17sp"
-                android:textStyle="bold" />
-        </LinearLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</com.google.android.material.navigation.NavigationView>
+    android:background="@drawable/menu_background"
+    app:headerLayout="@layout/nav_header"
+    app:menu="@menu/nav_menu"
+    app:itemTextAppearance="@style/menu_text_style"/>
